--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "SimpleSandbox"]
 	path = SimpleSandbox
 	url = https://github.com/Jinten/SimpleSandbox
+[submodule "imgui"]
+	path = imgui
+	url = https://github.com/ocornut/imgui.git
